# Incant

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
app/: .gitignore  DISTRIBUTION.md  README.md  build.sh  project.yml  release.sh
app/Casks/: incant.rb
app/Sources/: DaemonClient.swift  Info.plist  Models.swift  Notifications.swift  ProviderLogo.swift  Snapshot.swift  TannoyApp.swift
app/Sources/Assets.xcassets/IncantIcon.imageset/: Contents.json
app/Sources/Assets.xcassets/claude.imageset/: Contents.json
app/Sources/Assets.xcassets/codex.imageset/: Contents.json
app/Sources/Assets.xcassets/copilot.imageset/: Contents.json
app/Sources/Assets.xcassets/cursor.imageset/: Contents.json
app/Sources/Assets.xcassets/deepseek.imageset/: Contents.json
app/Sources/Assets.xcassets/devin.imageset/: Contents.json
app/Sources/Assets.xcassets/gemini.imageset/: Contents.json
app/Sources/Assets.xcassets/kimi.imageset/: Contents.json
app/Sources/Assets.xcassets/minimax.imageset/: Contents.json
app/Sources/Assets.xcassets/mistral.imageset/: Contents.json
app/Sources/Assets.xcassets/ollama.imageset/: Contents.json
app/Sources/Assets.xcassets/opencode.imageset/: Contents.json
app/Sources/Bubbles/: BubbleController.swift  BubbleDetailView.swift  BubbleView.swift  BubbleWindow.swift  KillTarget.swift
app/Sources/Onboarding/: DependencyChecker.swift  OnboardingView.swift  OnboardingWindow.swift
app/Sources/Views/: PopoverRoot.swift  VoicePicker.swift
config/: incant.toml
crates/incant-cli/: Cargo.toml
crates/incant-cli/src/: doctor.rs  main.rs  model.rs
crates/incant-daemon/: Cargo.toml  build.rs
crates/incant-daemon/src/: audio.rs  config.rs  ipc.rs  lib.rs  main.rs  output.rs  protocol.rs  sound.rs  state.rs  stt.rs
crates/incant-daemon/src/tests/: config_tests.rs  ipc_tests.rs  mod.rs  protocol_tests.rs
crates/incant-overlay/: Cargo.toml  build.rs
crates/incant-overlay/src/: main.rs
engine/: .gitignore  README.md  pyproject.toml
engine/src/incant/: checks.py  cli.py  config.py  daemon.py  hooks.py  install.py  onboard.py  textwork.py
hyprland/: incant.conf
systemd/: incant-daemon.service
