[workspace]
members = ["crates/incant-daemon", "crates/incant-cli", "crates/incant-overlay"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
authors = ["Zaakir <zaakir@omarchy.org>"]
license = "MIT"
repository = "https://github.com/zaakirio/Incant"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
