[project]
name = "incant"
version = "0.1.0"
description = "Voice for your coding agents: narrates Claude Code, Codex, and OpenCode turns with local TTS, plus push-to-talk STT."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Zaakir" }]
keywords = ["tts", "stt", "claude-code", "codex", "opencode", "mlx", "narration"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "tomli-w>=1.0",
    "mlx-audio[server,tts,stt]>=0.2 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # Kokoro's text frontend; mlx-audio treats it as optional but the default voice needs it.
    # NOTE: misaki's English g2p also needs the spaCy `en_core_web_sm` model, which is not a
    # normal PyPI dep. `incant install` fetches it into the environment (see ensure_spacy_model);
    # this avoids misaki's own lazy download, which shells out to `uv` and fails under a uv tool.
    "misaki[en]>=0.9 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # transformers 5.13 removed string keys in AutoTokenizer.register, which mlx-lm
    # (pulled in by mlx-audio's STT models) still uses; 5.12 is the last working release.
    "transformers<5.13 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "questionary>=2.1.1",
    "rich>=15.0.0",
]

[project.scripts]
incant = "incant.cli:main"

[project.urls]
Repository = "https://github.com/zaakirio/incant"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/incant"]
