[package]
name = "incant-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "incant"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml_edit = "0.22"
dirs = "6"
which = "7"
# Shared model registry + download logic
incant-daemon = { path = "../incant-daemon" }
# IPC - using tokio Unix sockets directly
