[package]
name = "incant-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace deps
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }

# Audio
# NOTE: deliberately NOT enabling cpal's `jack` feature. On Linux, cpal uses
# ALSA by default; on PipeWire systems, ALSA is transparently routed through
# pipewire-alsa. Enabling `jack` would pull libjack as a build-time dep for
# zero runtime benefit on our target distros.
cpal = "0.15"
hound = "3.5"

# STT (official upstream crate — replaces deprecated sherpa-rs)
sherpa-onnx = "1.13.2"

# IPC - using tokio Unix sockets directly

# Resampling for audio
rubato = "0.15"
dasp_sample = "0.11"

# Utils
dirs = "6"
uuid = { version = "1", features = ["v4"] }

# Async primitives
tokio-util = "0.7"

# HTTP client for model download
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# Progress bars for model downloads
indicatif = "0.17"

# Checksum verification for downloaded model files
sha2 = "0.10"
hex = "0.4"

# Sound effects
rodio = { version = "0.20", default-features = false, features = ["wav"] }
